2012-12-02  Eric Seidel  <eric@webkit.org>

        run-perf-tests --profile should use iprofiler instead of instruments on Mac
        https://bugs.webkit.org/show_bug.cgi?id=103765

        Unreviewed.  Updating the unittests after my previous change.

        * Scripts/webkitpy/common/system/profiler_unittest.py:
        (ProfilerFactoryTest.test_basic):

2012-12-02  Julie Parent  <jparent@chromium.org>

        Remove dead code in flakiness dashboard for obsolete buildDir option
        https://bugs.webkit.org/show_bug.cgi?id=103792

        Reviewed by Dirk Pranke.

        * TestResultServer/static-dashboards/dashboard_base.js:
        (initBuilders):

2012-12-02  Dirk Pranke  <dpranke@chromium.org>

        nrwt: clean up logic for retrying failed tests a bit
        https://bugs.webkit.org/show_bug.cgi?id=103829

        Reviewed by Ojan Vafai.

        The code for determining when to retry test failures and
        show the results.html file was awkward and could stand some
        cleaning up. This patch should have no functional changes.

        The routine called _get_failures() returned a dict of test names
        to failure types, but we only ever used the names, so I've converted
        it to return a list (and renamed it); also, the show_results_html()
        file was calling that routine to figure out if anything failed, when
        the information was already in the result_summary (as either
        unexpected_results or total_failures), so we were doing unnecessary work.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        (Manager.__init__):
        (Manager.run):
        (Manager._run_tests):
        (Manager._failed_test_names):
        (Manager._copy_results_html_file):

2012-12-02  Dirk Pranke  <dpranke@chromium.org>

        nrwt: remove unused methods in manager.py
        https://bugs.webkit.org/show_bug.cgi?id=103828

        Reviewed by Eric Seidel.
