@@ -1,3 +1,15 @@
+2012-12-02  Mike West  <mkwst@chromium.org>
+
+        Garden-o-matic shouldn't die when blank JSON results are received.
+        https://bugs.webkit.org/show_bug.cgi?id=103838
+
+        Reviewed by Adam Barth.
+
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base.js:
+            If the JSONP string doesn't contain '(' or ')', return an empty object.
+        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base_unittests.js:
+            Check that this behavior stays in place.
+
 2012-12-02  Eric Seidel  <eric@webkit.org>
 
         run-perf-tests --profile should use iprofiler instead of instruments on Mac
